--- a/ianchou/Makefile
+++ b/ianchou/Makefile
@@ -1,5 +1,11 @@
-All: ImageParser.class YoutubeParser.class
+All: ImageParser.class YoutubeParser.class YoutubePanel.class Downloader.class DownloadPanel.class
 ImageParser.class: ImageParser.java
 	javac -cp ../lib/htmlparser.jar:../lib/htmllexer.jar:../filterbuilder.jar:../sitecapturer.jar:thumbelina.jar:. ImageParser.java
 YoutubeParser.class: YoutubeParser.java
 	javac -cp ../lib/commons-codec-1.3.jar:../lib/commons-logging-1.1.1.jar:../lib/commons-httpclient-3.1.jar:. YoutubeParser.java
+YoutubePanel.class: YoutubePanel.java
+	javac -cp .. YoutubePanel.java
+Downloader.class: Downloader.java
+	javac -cp ../lib/commons-codec-1.3.jar:../lib/commons-logging-1.1.1.jar:../lib/commons-httpclient-3.1.jar:. Downloader.java
+DownloadPanel.class: DownloadPanel.java
+	javac -cp .. DownloadPanel.java
