--- a/ianchou/Makefile
+++ b/ianchou/Makefile
@@ -1,4 +1,4 @@
-All: ImageParser.class YoutubeParser.class YoutubePanel.class Downloader.class DownloadPanel.class
+All: ImageParser.class YoutubeParser.class YoutubePanel.class Downloader.class DownloadPanel.class ImagePanel.class
 ImageParser.class: ImageParser.java
 	javac -cp ../lib/htmlparser.jar:../lib/htmllexer.jar:../filterbuilder.jar:../sitecapturer.jar:thumbelina.jar:. ImageParser.java
 YoutubeParser.class: YoutubeParser.java
@@ -9,3 +9,5 @@ Downloader.class: Downloader.java
 	javac -cp ../lib/commons-codec-1.3.jar:../lib/commons-logging-1.1.1.jar:../lib/commons-httpclient-3.1.jar:. Downloader.java
 DownloadPanel.class: DownloadPanel.java
 	javac -cp .. DownloadPanel.java
+ImagePanel.class: ImagePanel.java
+	javac -cp .. ImagePanel.java
