No commit message

--- a/ianchou/Makefile
+++ b/ianchou/Makefile
@@ -1,13 +1,15 @@
-All: ImageParser.class YoutubeParser.class YoutubePanel.class Downloader.class DownloadPanel.class ImagePanel.class
+All: ImageInfo.class ImageParser.class YoutubeParser.class Downloader.class DownloadPanel.class ImagePanel.class YoutubePanel.class
 ImageParser.class: ImageParser.java
-	javac -cp ../lib/htmlparser.jar:../lib/htmllexer.jar:../filterbuilder.jar:../sitecapturer.jar:thumbelina.jar:. ImageParser.java
+	javac -cp ../lib/htmlparser.jar:../lib/htmllexer.jar:../filterbuilder.jar:../sitecapturer.jar:thumbelina.jar:.. ImageParser.java
 YoutubeParser.class: YoutubeParser.java
-	javac -cp ../lib/commons-codec-1.3.jar:../lib/commons-logging-1.1.1.jar:../lib/commons-httpclient-3.1.jar:. YoutubeParser.java
+	javac -cp ../lib/commons-codec-1.3.jar:../lib/commons-logging-1.1.1.jar:../lib/commons-httpclient-3.1.jar:.. YoutubeParser.java
 YoutubePanel.class: YoutubePanel.java
 	javac -cp .. YoutubePanel.java
 Downloader.class: Downloader.java
-	javac -cp ../lib/commons-codec-1.3.jar:../lib/commons-logging-1.1.1.jar:../lib/commons-httpclient-3.1.jar:. Downloader.java
+	javac -cp ../lib/commons-codec-1.3.jar:../lib/commons-logging-1.1.1.jar:../lib/commons-httpclient-3.1.jar:.. Downloader.java
 DownloadPanel.class: DownloadPanel.java
 	javac -cp .. DownloadPanel.java
 ImagePanel.class: ImagePanel.java
 	javac -cp .. ImagePanel.java
+ImageInfo.class: ImageInfo.java
+	javac ImageInfo.java
